# ChangeLog for dev-cpp/cpplint
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*cpplint-3.231_p104 (12 Jun 2013)

  12 Jun 2013; Martin Väth <martin@mvath.de>:
  Download with static svn version for consistent download: Finally, the
  ebuild works even when it is out of date.

*cpplint-3.231 (08 Feb 2013)

  08 Feb 2013; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild. Follow license renaming.

*cpplint-3.199 (25 Jul 2012)

  21 Sep 2012; Martin Väth <martin@mvath.de>:
  Bump to EAPI=5

  25 Jul 2012; Martin Väth <martin@mvath.de>:
  New ebuild from scratch.