@@ -1,0 +1,6 @@
+# ChangeLog for app-text/psjoin
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# $Header: $
+
+  31 Jul 2013; Martin Väth <martin@mvath.de>
+  New ebuild from scratch
