@@ -2,6 +2,11 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*cpplint-3.260_p110 (31 Jul 2013)
+
+  31 Jul 2013; Martin Väth <martin@mvath.de>:
+  Version bump, remove old ebuild. Fix download of static svn version.
+
 *cpplint-3.231_p104 (12 Jun 2013)
 
   12 Jun 2013; Martin Väth <martin@mvath.de>:
